# AI-incidentAgent

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  deploy-dev.yml
agent/: requirements.txt
agent/src/: aws_clients.py  handler.py  models.py  orchestrator.py  prompts.py  reporting.py  usage.py
agent/src/guardrails/: __init__.py  actions.py  engine.py  policies.py
agent/src/tools/: __init__.py  get_logs.py  get_metrics.py  get_recent_deployments.py
agent/tests/: test_demo_scenarios.py  test_guardrails.py  test_orchestrator.py  test_tools.py
apps/loan-processing/src/: chaos.py  handler.py  logging_utils.py  metrics.py  report_viewer.py  routes.py
apps/loan-processing/src/static/: report_viewer.html
apps/loan-processing/tests/: test_loan_app.py
infra/: main.tf  outputs.tf  providers.tf  variables.tf  versions.tf
infra/environments/: dev.tfvars
scripts/: adopt_terraform_state.sh  demo_three_scenarios.ps1  package_lambdas.ps1  smoke_verify.ps1  triage_manual.ps1
