[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-incident-triage-agent"
version = "1.0.0"
description = "Cost-optimized AWS AIOps assistant for automated incident triage"
requires-python = ">=3.11"
dependencies = [
  "anthropic>=0.40.0",
  "boto3>=1.35.0",
  "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-cov>=5.0.0",
  "moto[cloudwatch,logs,s3,sns,ssm]>=5.0.0",
  "ruff>=0.6.0",
]

[tool.setuptools]
packages = []

[tool.pytest.ini_options]
testpaths = ["apps", "agent"]
pythonpath = ["apps/loan-processing/src", "agent/src"]
addopts = "-q --tb=short"

[tool.ruff]
line-length = 100
target-version = "py311"
